fix: filter slide out bugs and scrollbar width for datatbles

--- a/src/scss/filejet-scss/_custom.scss
+++ b/src/scss/filejet-scss/_custom.scss
@@ -419,7 +419,7 @@ label.form-check-label, label.form-check,label{
   overflow-x: auto;
 
   .form-check {
-    width: 20%;
+    width: 22.5%;
   }
 }
 
