--- a/src/scss/filejet-scss/_dataTable.scss
+++ b/src/scss/filejet-scss/_dataTable.scss
@@ -188,3 +188,15 @@ table {
     }
 }
 
+.dataTables_scrollBody,.radio-checkbox-group,.modal-dialog-scrollable .modal-body{
+    &::-webkit-scrollbar {
+        width: rem(10);
+        height: rem(10);
+    }
+    &::-webkit-scrollbar-track {
+        background: #f5f4f4; 
+      }
+    &::-webkit-scrollbar-thumb {
+        background: #d1d1d1; 
+    }
+}
